Adds a few nn2rt or rt2nn methods to TTRRecordType.